# mlops-zoomcamp

./: Pipfile  pyproject.toml
00-homework-solns/: 01.ipynb  02-mlflow.ipynb  04-deployment.ipynb  04-deployment.py
00-homework-solns/mlruns/0/: meta.yaml
00-homework-solns/mlruns/0/28729169c1cd4d7db9785357e039e239/: meta.yaml
00-homework-solns/mlruns/0/60721557a2a34090b5c832ade3e6daca/: meta.yaml
01-intro/: duration-prediction.ipynb
02-experiment-tracking/mlruns/.trash/203957347398273194/: meta.yaml
02-experiment-tracking/mlruns/.trash/251390377604305518/: meta.yaml
02-experiment-tracking/mlruns/.trash/728016018972163602/: meta.yaml
02-experiment-tracking/mlruns/0/: meta.yaml
02-experiment-tracking/mlruns/810695188403491797/: meta.yaml
02-experiment-tracking/mlruns/810695188403491797/17e6706b33a84162a92098aa3ff914ba/: meta.yaml
02-experiment-tracking/running-mlflow-examples/: scenario-1.ipynb  scenario-2.ipynb
02-experiment-tracking/running-mlflow-examples/mlruns/0/: meta.yaml
05-monitoring/: evidently_metrics_calculation.py  hw-solution-05-monitoring.ipynb
05-monitoring/dashboards/: data_drift.json
05-monitoring/workspace/13c4fdce-d7ca-46b0-9ba3-7dbe39959721/: metadata.json
05-monitoring/workspace/78adaebf-674e-4547-b097-2dbb92fc0b32/: metadata.json
05-monitoring/workspace/afaf0b79-aade-4b20-ab39-74bb022941a9/: metadata.json
cohorts/2024/02-experiment-tracking/homework/: hpo.py  register_model.py  (+1 more)
mage-orchestrator/mlops/: docker-compose.yml  mlflow.dockerfile
mage-orchestrator/mlops/mlops/: metadata.yaml
mlruns/0/: meta.yaml
(+65 files in other folders)
