[tool.poetry]
name = "mlops-zoomcamp"
version = "0.1.0"
description = ""
authors = ["ashishthomaschempolil <ashishthomas7@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.2"
ipykernel = "^6.29.4"
pyarrow = ">=4.0.0,<16.0.0"
fastparquet = "^2024.2.0"
mlflow = "^2.12.2"
hyperopt = "^0.2.7"

[tool.poetry.group.dev.dependencies]
seaborn = "^0.13.2"
matplotlib = "^3.8.4"
scikit-learn = "^1.4.2"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
